16.05.2025
    - DSSI: Fixed: Recent ALSA changes give error inside system header dssi.h (Tim)
      #warning "use #include <alsa/asoundlib.h>, <alsa/seq_event.h> should not be used directly"
      Unfortunately seq_event.h is included inside dssi.h. Made local copy of dssi.h with corrections.

13.05.2025
    * Spring 2025 large fixes and features: (Tim)

    - Effect rack plugins: Persistent plugins now added.
      Even if a song is missing effect rack plugins and it is saved, all the information
       necessary to recreate the plugins is saved. When the missing plugins are finally installed,
       the song loads noramlly and everything is preserved.
      (Previously only synth tracks had this persistence.)

    - Effect rack plugins: Fixed drag and drop. Both drag move and copy work now.
      Controllers and midi assignments are also moved or copied.
      Fixed corrupt XML in drag and drop plugins. QByteArray was not being used correctly.
      TODO: Drag to desktop still not working, apparently it's very complicated.

    - All effect rack operations (adding/removing/moving/drag etc.) are now undoable/redoable.

    - Mixer: Added Undo and Redo menu items to mixer 'View' menu.
      Tested Ctrl-Z and Shift-Ctrl-Z: Works OK now.
      Helps when dragging plugins but also works with some of the other mixer functions
       like track rename, track create.

    - Effect/synth plugins: Do not store or recognize initial parameters if custom data is present.
      The assumption is that control or parameter values would be included in the custom data.
      This is in fact alluded to in the vst spec. It says chunks can store the whole state,
       but if chunks are not used then an alternative is to store the parameter values.
      One of the things this might fix is complaints that some plugins immediately show
       an indicator that they have been 'modified'. It might be because we were sending all