@@ -57,9 +57,10 @@
 
 #ifdef DSSI_SUPPORT
 // Recent ALSA changes cause error inside dssi.h
-// Use our local version with corrections instead.
-//#include <dssi.h>
-#include "dssi/dssi.h"
+// #warning "use #include <alsa/asoundlib.h>, <alsa/seq_event.h> should not be used directly"
+// Include the asoundlib.h before dssi.h
+#include <alsa/asoundlib.h>
+#include <dssi.h>
 #endif
 
 // BUG I have filed a Qt bug report 64773. If we do NOT
